<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="fastcampus.part3.random_image.MainActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{()-> view.openMvc()}"
            android:text="@string/pattern_mvc" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{()-> view.openMvp()}"
            android:text="@string/pattern_mvp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{()-> view.openMvvm()}"
            android:text="@string/pattern_mvvm" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{()-> view.openMvi()}"
            android:text="@string/pattern_mvi" />
    </LinearLayout>
</layout>